fix style bleeding when using ng-deep (https://github.com/angular/angular/issues/13724)

--- a/src/app/+taxonomy/taxon/taxon.component.css
+++ b/src/app/+taxonomy/taxon/taxon.component.css
@@ -25,11 +25,11 @@ laji-info-card {
     height: calc(100vh - 50px);
   }
 
-  ::ng-deep laji-info-card .info-card-header-first-row {
+  :host ::ng-deep laji-info-card .info-card-header-first-row {
     margin-left: 10px;
   }
 }
-::ng-deep laji-info-card.sidebar-hidden .info-card-header-first-row {
+:host ::ng-deep laji-info-card.sidebar-hidden .info-card-header-first-row {
   margin-left: -15px;
 }
 
